--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,8 @@ textarea {
 
 body {
   margin: 1em;
-  font-family: arial, helvetica, sans-serif;
+  /*font-family: arial, helvetica, sans-serif;*/
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #FFF;
   color: black;
 }
@@ -337,7 +338,6 @@ nav ul li a:hover {
 .nested {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
-  /*grid-auto-columns: minmax(400px, auto);*/
 }
 .nested > article{
   padding: 0.25em;
@@ -363,9 +363,11 @@ nav ul li a:hover {
 .main-area {
   grid-column: 1/4;
 }
+
 .sidfot {
   grid-column: 1 / 4;
   background-color:  rgba(85, 75, 69,0.5);
+  text-align: left;
 }
 
 .showcase {
@@ -457,6 +459,11 @@ nav ul li a:hover {
     .medier {
       display: none;
     }
+    
+  .contact-img {
+    display: none;
+  }
+
   }
 
   .bloggwrapper {
@@ -508,3 +515,79 @@ nav ul li a:hover {
     padding: 1em;
     font-size: 120%;
   }
+
+  .contact-main {
+    background-color: rgba(209, 186, 172, 0.5);
+    color: black;
+    padding: 1em;
+    font-size: 120%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
+  }
+
+  .contact {
+    grid-area: showcase;
+    grid-column: 1/3;
+    padding: 2rem;
+  }
+
+  .contact-img {
+    grid-area: sidebar;
+    width: 100%;
+  }
+
+  input {
+    text-rendering: auto;
+    color: initial;
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    -webkit-appearance: textfield;
+    background-color: white;
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    margin: 0em;
+    font: 400 13.3333px Arial;
+    padding: 1px 0px;
+    border-width: 2px;
+}
+
+input, textarea {
+  display: block;
+  width: 100%;
+  border: 2px solid rgba(85, 75, 69, 0.5);
+  padding: 0.5rem;
+  font-size: 1em;
+  border-radius: 5px;
+}
+
+#skickaBtn {
+  display: block;
+  width: auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.om-oss {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(23em, 1fr));
+  background-color: rgba(209, 186, 172, 0.5);
+  color: black;
+  padding: 1em;
+  font-size: 120%;
+}
+
+.om-oss > article{
+  padding: 0.25em;
+  text-align: left;
+}
+
+.om-oss-img {
+  width: 100%;
+  margin: 0.5em;
+}
+
