--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ body {
   margin: 1em;
   /*font-family: arial, helvetica, sans-serif;*/
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #FFF;
+  background-color: rgba(209, 186, 172, 0.2);
   color: black;
 }
 
