--- a/css/main.css
+++ b/css/main.css
@@ -364,12 +364,6 @@ nav ul li a:hover {
   grid-column: 1/4;
 }
 
-.sidfot {
-  grid-column: 1 / 4;
-  background-color:  rgba(85, 75, 69,0.5);
-  text-align: left;
-}
-
 .showcase {
   width: 100%;
   /*grid-row: 2;*/
@@ -431,8 +425,12 @@ nav ul li a:hover {
 .btn {
   background: rgba(85, 75, 69, 0.5);
   padding: 0.3em;
-  margin-bottom: 1em;
 }
+
+.katt > p {
+  margin-top: 0.5em;
+}
+
 .active {
   background-color: rgba(85, 75, 69, 0.5);
 }
