--- a/css/main.css
+++ b/css/main.css
@@ -325,6 +325,7 @@ nav ul li a:hover {
   height: 2em;
   margin: 0.5em;
 }
+
 .wrapper {
   display: grid;
   grid-gap: 0.5em;
@@ -476,6 +477,10 @@ nav ul li a:hover {
     background-color: rgba(209, 186, 172, 0.5);
     text-align: center;
     margin-top: 0.5em;
+    padding: 0.5em;
+  }
+
+  .blogginl h2 {
     padding: 1em;
   }
 
