--- a/css/main.css
+++ b/css/main.css
@@ -187,9 +187,6 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
@@ -264,14 +261,15 @@ textarea {
   }
 }
 
+/* Sätter grunden för margin, font, bakgrund och färg på texten på alla sidor */
 body {
   margin: 1em;
-  /*font-family: arial, helvetica, sans-serif;*/
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgba(209, 186, 172, 0.2);
   color: black;
 }
 
+/* Nedan kod sätter styling för navigationen på alla sidor*/
 nav ul {
   margin: 0;
 }
@@ -288,7 +286,7 @@ nav ul li a{
 nav ul li a:hover {
   background-color: rgba(85, 75, 69, 0.5);
 }
-
+/* Styling för själva länkarna i navbaren*/
 .navbar {
   grid-column: 2;
   width: 30em;
@@ -296,18 +294,21 @@ nav ul li a:hover {
   margin-left: -10em;
 }
 
+/* En section för sociala medier,*/
 .medier {
   width: 6.5em;
   float: right;
   grid-column: end;
 }
 
+/* Styling för själva navbaren*/
 .nav {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-column: 2;
 }
 
+/*Styling för loggan */
 .logo {
   height: 3em;
   grid-column: initial;
@@ -320,12 +321,14 @@ nav ul li a:hover {
   width: 1em;
 }
 
+/*Styling för sociala medier ikoner på stora skärmar*/
 .ikoner {
   float: left;
   height: 2em;
   margin: 0.5em;
 }
 
+/*Styling för wrappern på hemsidan*/
 .wrapper {
   display: grid;
   grid-gap: 0.5em;
@@ -336,6 +339,7 @@ nav ul li a:hover {
   text-align: center;
 }
 
+/*Styling för grids*/
 .nested {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
@@ -351,6 +355,7 @@ nav ul li a:hover {
   font-size: 120%;
 }
 
+/*Styling på header samt intern grid*/
 .header {
   grid-column: 1 / 4;
   grid-row: 1;
@@ -361,13 +366,13 @@ nav ul li a:hover {
   align-items: center;
 }
 
+/*Styling och grids på hemsidan i main & showcase*/
 .main-area {
   grid-column: 1/4;
 }
 
 .showcase {
   width: 100%;
-  /*grid-row: 2;*/
   grid-column: 1 / 4;
   height: auto;
 }
@@ -376,7 +381,8 @@ nav ul li a:hover {
   width: 100%;
 }
 
-.katt {
+/*Styling av artiklar*/
+.article {
   margin-top: 1em;
   border-bottom: 0.1rem solid black;
   object-fit: contain;
@@ -385,20 +391,21 @@ nav ul li a:hover {
 .mainarticle {
   font-weight: 600;
 }
-.button {
-  margin-bottom: 2em;
+
+.btn {
+  background: rgba(85, 75, 69, 0.5);
+  padding: 0.3em;
 }
 
+.article > p {
+  margin-top: 0.5em;
+}
+
+/*Styling av nav-bar på små skärmar*/
 #menu {
   display: none;
   width: 2em;
   grid-column: end;
-}
-
-#icon {
-  height: 2em;
-  float: left;
-  background-color: none;
 }
 
 #navmobile {
@@ -423,143 +430,111 @@ nav ul li a:hover {
   margin-right: 0.2em;
 }
 
-.btn {
-  background: rgba(85, 75, 69, 0.5);
-  padding: 0.3em;
-}
-
-.katt > p {
-  margin-top: 0.5em;
-}
-
+/*En klass som används för att visa vilken sida man är på*/
 .active {
   background-color: rgba(85, 75, 69, 0.5);
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 672px) {
-
-  .medier {
-    display: none;
-  }
-
-  .navbar {
-    margin: 0;
-    display: none;
-  }
-
-  #menu {
-    display: inline-block;
-  }
+/* Grund för sidan blogg */
+.bloggwrapper {
+  grid-gap: 0.5em;
+  color: black;
+  max-width: 70em;
+  margin: auto;
+  text-align: center;
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 800px) {
-    .medier {
-      display: none;
-    }
-    
-  .contact-img {
-    display: none;
-  }
+/*Styling för blogginlägg*/ 
+.blogginl {
+  background-color: rgba(209, 186, 172, 0.5);
+  text-align: center;
+  margin-top: 0.5em;
+  padding: 0.5em;
+}
 
-  }
+.blogginl h2 {
+  padding: 1em;
+}
 
-  .bloggwrapper {
-    grid-gap: 0.5em;
-    color: black;
-    max-width: 70em;
-    margin: auto;
-    text-align: center;
-  }
+.bloggbild {
+  margin-top: 1em;
+  width: 90%;
+  display: inline-block;
+}
 
-  .blogginl {
-    background-color: rgba(209, 186, 172, 0.5);
-    text-align: center;
-    margin-top: 0.5em;
-    padding: 0.5em;
-  }
+.date {
+  text-align: left;
+  margin-left: 3em;
+}
 
-  .blogginl h2 {
-    padding: 1em;
-  }
+.bloggpost {
+  text-align: left;
+  padding: 1em;
+}
 
-  .bloggbild {
-    margin-top: 1em;
-    width: 90%;
-    display: inline-block;
-  }
+/*Styling för sidan Våra Katter*/
+.vara-katter-img {
+  width: 100%;
+  height: 12em;
+  object-fit: contain;
+}
 
-  .date {
-    text-align: left;
-    margin-left: 3em;
-  }
+.vara-katter {
+  text-align: left;
+  margin-left: 1em;
+}
 
-  .bloggpost {
-    text-align: left;
-    padding: 1em;
-  }
+.vara-katter:hover {
+  background-color:  rgba(209, 186, 172, 0.3);
+}
 
-  .vara-katter-img {
-    width: 100%;
-    height: 12em;
-    object-fit: contain;
-  }
+.vara-katter-main {
+  background-color: rgba(209, 186, 172, 0.5);
+  color: black;
+  padding: 1em;
+  font-size: 120%;
+}
 
-  .vara-katter {
-    text-align: left;
-    margin-left: 1em;
-  }
+/*Styling för kontaktsidan*/
+.contact-main {
+  background-color: rgba(209, 186, 172, 0.5);
+  color: black;
+  padding: 1em;
+  font-size: 120%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
+}
 
-  .vara-katter:hover {
-    background-color:  rgba(209, 186, 172, 0.3);
-  }
+.contact {
+  grid-area: showcase;
+  grid-column: 1/3;
+  padding: 2rem;
+}
 
-  .vara-katter-main {
-    background-color: rgba(209, 186, 172, 0.5);
-    color: black;
-    padding: 1em;
-    font-size: 120%;
-  }
+.contact-img {
+  grid-area: sidebar;
+  width: 100%;
+}
 
-  .contact-main {
-    background-color: rgba(209, 186, 172, 0.5);
-    color: black;
-    padding: 1em;
-    font-size: 120%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
-  }
-
-  .contact {
-    grid-area: showcase;
-    grid-column: 1/3;
-    padding: 2rem;
-  }
-
-  .contact-img {
-    grid-area: sidebar;
-    width: 100%;
-  }
-
-  input {
-    text-rendering: auto;
-    color: initial;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    -webkit-appearance: textfield;
-    background-color: white;
-    -webkit-rtl-ordering: logical;
-    cursor: text;
-    margin: 0em;
-    font: 400 13.3333px Arial;
-    padding: 1px 0px;
-    border-width: 2px;
+/*Styling för formuläret på kontaktsidan*/
+input {
+  text-rendering: auto;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  -webkit-appearance: textfield;
+  background-color: white;
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  margin: 0em;
+  font: 400 13.3333px Arial;
+  padding: 1px 0px;
+  border-width: 2px;
 }
 
 input, textarea {
@@ -578,6 +553,7 @@ input, textarea {
   margin-bottom: 1em;
 }
 
+/*Styling för om-oss sidan*/
 .om-oss {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
@@ -597,3 +573,34 @@ input, textarea {
   margin: 0.5em;
 }
 
+/*Mediaquerys för en mer responsiv sida*/
+/* Döljer sociala medier, navbar och visar istället hamburgermenyn på små skärmar */
+@media screen and (max-width: 672px) {
+
+  .medier {
+    display: none;
+  }
+
+  .navbar {
+    margin: 0;
+    display: none;
+  }
+
+  #menu {
+    display: inline-block;
+  }
+}
+
+/* Döljer sociala medier på små skärmar */
+@media screen and (max-width: 800px) {
+    .medier {
+      display: none;
+    }
+  }
+
+/* Döljer bilden under kontaktsidan på mindre skärmar */
+  @media screen and (max-width: 980px) {
+  .contact-img {
+    display: none;
+  }
+  }
